loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: type mismatch;
 found   : Int(1)
 required: Boolean
var estSurBiscuit() : Boolean =1
                               ^LoopFor:1: error: not found: value estSurBiscuit
var estSurBiscuit() : Boolean =1
    ^