loopfor.LoopFor.scala.code
var estSurBiscuit() : Boolean =1
